Add shutdown handler to control shutdown sequence in a deterministic way (instead of shutdown hooks in multiple components)